@@ -1,5 +1,7 @@
 2002-08-04  Max Horn  <max@quendi.de>
 
+	* PkgVersion.pm: Patch #588476 (Java support) by Sylvain Cuaz.
+
 	* Fixed bug #548373 (package DB read thrice). It is not only read twice
 	  (the new package manager may support new features, and thus must rebuild
 	  the database once more)
